# diesel-test

./: .env  Cargo.toml
migrations/2023-01-21-041041_create_key_pair_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/gql/: key_pairs_schema.rs  mod.rs
src/models/: key_pair.rs  mod.rs
src/modules/auth/: mod.rs
src/modules/auth/api/services/: mod.rs  read_key_pair.rs
src/modules/auth/models/: key_pair.rs  mod.rs  permission.rs
src/modules/auth/repositories/: auth_repository.rs  mod.rs
src/modules/auth/repositories/implementations/diesel/: diesel_auth_repository.rs  mod.rs
src/services/: key_pairs.rs  mod.rs
src/utils/: pagination.rs
