[package]
name = "cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.10"
uuid = {version = "1.2.2", features = ["v4"]}
serde = {version = "1.0.152", features = ["derive"]}
bitflags = "1.3.2"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
juniper = "0.15"
actix-cors = "0.6"
actix-web-lab = "0.18"